--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,9 +5,9 @@
         <form class="form-signin" (ngSubmit)="onLogin(f)" #f="ngForm">
           <h2 class="form-signin-heading">Please sign in</h2>
           <label for="loginname" class="sr-only">Login name</label>
-          <input type="email" id="loginname" class="form-control" placeholder="user name" name="loginname" ngModel class="form-control" required autofocus>
+          <input type="email" id="loginname"  placeholder="user name" name="loginname" ngModel class="form-control" required autofocus>
           <label for="inputPassword" class="sr-only">Password</label>
-          <input type="password" id="password" class="form-control" placeholder="Password" name="password" ngModel class="form-control" required>
+          <input type="password" id="password"  placeholder="Password" name="password" ngModel class="form-control" required>
           <div class="checkbox">
             <label>
               <input type="checkbox" value="remember-me"> Remember me
